istio-demo/istio-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-a
  labels:
    app: project-a
    version: v1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-a
      version: v1.0.0
  template:
    metadata:
      labels:
        app: project-a
        version: v1.0.0
    spec:
      containers:
        - name: project-a
          image: project-a:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-b
  labels:
    app: project-b
    version: v1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-b
      version: v1.0.0
  template:
    metadata:
      labels:
        app: project-b
        version: v1.0.0
    spec:
      containers:
        - name: project-b
          image: project-b:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: project-a
  labels:
    app: project-a
    service: project-a
spec:
  ports:
    - port: 8081
      name: http
  selector:
    app: project-a
---
apiVersion: v1
kind: Service
metadata:
  name: project-b
  labels:
    app: project-b
    service: project-b
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: project-b
